--- a/package.json
+++ b/package.json
@@ -12,23 +12,25 @@
   "author": "John Aries Saique",
   "license": "ISC",
   "dependencies": {
-    "@glidejs/glide": "^3.6.0",
-    "gh-pages": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4"
+    "@glidejs/glide": "^3.4.1",
+    "gh-pages": "^3.2.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.3",
     "babel-polyfill": "^6.26.0",
-    "css-loader": "^6.7.3",
-    "html-loader": "^4.2.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^6.5.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.58.0",
-    "sass-loader": "^13.2.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
